--- a/packages/data-stores/package.json
+++ b/packages/data-stores/package.json
@@ -35,7 +35,7 @@
 		"@wordpress/api-fetch": "^6.4.0",
 		"@wordpress/data-controls": "^2.7.0",
 		"@wordpress/deprecated": "^3.7.0",
-		"@wordpress/url": "3.8.0",
+		"@wordpress/url": "^3.8.0",
 		"fast-json-stable-stringify": "^2.1.0",
 		"i18n-calypso": "workspace:^",
 		"qs": "^6.9.1",
