--- a/packages/design-picker/package.json
+++ b/packages/design-picker/package.json
@@ -35,7 +35,7 @@
 		"@automattic/typography": "workspace:^",
 		"@wordpress/components": "^19.9.0",
 		"@wordpress/react-i18n": "^3.0.4",
-		"@wordpress/url": "3.8.0",
+		"@wordpress/url": "^3.8.0",
 		"classnames": "^2.3.1",
 		"react-query": "^3.32.1",
 		"tslib": "^2.3.0",
