--- a/packages/launch/package.json
+++ b/packages/launch/package.json
@@ -39,7 +39,7 @@
 		"@wordpress/components": "^19.9.0",
 		"@wordpress/icons": "^8.3.0",
 		"@wordpress/react-i18n": "^3.0.4",
-		"@wordpress/url": "3.8.0",
+		"@wordpress/url": "^3.8.0",
 		"classnames": "^2.3.1",
 		"react-router-dom": "^5.1.2",
 		"tslib": "^2.3.0",
